tests/machine/x/swift/cross_join_triple.swift
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
struct Combo: Equatable {
    var b: Bool
    var l: String
    var n: Int
}

var nums = [1, 2]
var letters = ["A", "B"]
var bools = [true, false]
var combos = ({
	var _res: [(b: Bool, l: String, n: Int)] = []
	for n in nums {
		for l in letters {
			for b in bools {
				_res.append(["n": n, "l": l, "b": b])
			}
		}
	}
	return _res
}())
print("--- Cross Join of three lists ---")
for c in combos {
    print(c.n, c.l, c.b)
}
